add get sum services handler
