# generated/oas_router_gen.go
@@ -1,6 +1,6 @@
 // Code generated by ogen, DO NOT EDIT.
 
-package oas
+package vnt
 
 import (
 	"net/http"
@@ -48,24 +48,195 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 			break
 		}
 		switch elem[0] {
-		case '/': // Prefix: "/viento/products"
+		case '/': // Prefix: "/"
 			origElem := elem
-			if l := len("/viento/products"); len(elem) >= l && elem[0:l] == "/viento/products" {
+			if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
 				elem = elem[l:]
 			} else {
 				break
 			}
 
 			if len(elem) == 0 {
-				// Leaf node.
-				switch r.Method {
-				case "POST":
-					s.handleGetVientoProductsRequest([0]string{}, elemIsEscaped, w, r)
-				default:
-					s.notAllowed(w, r, "POST")
+				break
+			}
+			switch elem[0] {
+			case 'o': // Prefix: "ozon/"
+				origElem := elem
+				if l := len("ozon/"); len(elem) >= l && elem[0:l] == "ozon/" {
+					elem = elem[l:]
+				} else {
+					break
 				}
 
-				return
+				if len(elem) == 0 {
+					break
+				}
+				switch elem[0] {
+				case 'i': // Prefix: "item"
+					origElem := elem
+					if l := len("item"); len(elem) >= l && elem[0:l] == "item" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "POST":
+							s.handleGetVientoItemsRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "POST")
+						}
+
+						return
+					}
+
+					elem = origElem
+				case 'l': // Prefix: "list_transaction"
+					origElem := elem
+					if l := len("list_transaction"); len(elem) >= l && elem[0:l] == "list_transaction" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "POST":
+							s.handleGetVientoListTransactionRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "POST")
+						}
+
+						return
+					}
+
+					elem = origElem
+				case 'o': // Prefix: "operation"
+					origElem := elem
+					if l := len("operation"); len(elem) >= l && elem[0:l] == "operation" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "POST":
+							s.handleGetVientoOperationsRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "POST")
+						}
+
+						return
+					}
+
+					elem = origElem
+				case 'p': // Prefix: "posting"
+					origElem := elem
+					if l := len("posting"); len(elem) >= l && elem[0:l] == "posting" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "POST":
+							s.handleGetVientoPostingRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "POST")
+						}
+
+						return
+					}
+
+					elem = origElem
+				case 's': // Prefix: "s"
+					origElem := elem
+					if l := len("s"); len(elem) >= l && elem[0:l] == "s" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						break
+					}
+					switch elem[0] {
+					case 'e': // Prefix: "ervice"
+						origElem := elem
+						if l := len("ervice"); len(elem) >= l && elem[0:l] == "ervice" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleGetVientoServicesRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
+							}
+
+							return
+						}
+
+						elem = origElem
+					case 'u': // Prefix: "um/services"
+						origElem := elem
+						if l := len("um/services"); len(elem) >= l && elem[0:l] == "um/services" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleGetSumServicesByDayRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
+							}
+
+							return
+						}
+
+						elem = origElem
+					}
+
+					elem = origElem
+				}
+
+				elem = origElem
+			case 'v': // Prefix: "viento/products"
+				origElem := elem
+				if l := len("viento/products"); len(elem) >= l && elem[0:l] == "viento/products" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "POST":
+						s.handleGetVientoProductsRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "POST")
+					}
+
+					return
+				}
+
+				elem = origElem
 			}
 
 			elem = origElem
@@ -149,28 +320,223 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 			break
 		}
 		switch elem[0] {
-		case '/': // Prefix: "/viento/products"
+		case '/': // Prefix: "/"
 			origElem := elem
-			if l := len("/viento/products"); len(elem) >= l && elem[0:l] == "/viento/products" {
+			if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
 				elem = elem[l:]
 			} else {
 				break
 			}
 
 			if len(elem) == 0 {
-				// Leaf node.
-				switch method {
-				case "POST":
-					r.name = "GetVientoProducts"
-					r.summary = "get viento products"
-					r.operationID = "getVientoProducts"
-					r.pathPattern = "/viento/products"
-					r.args = args
-					r.count = 0
-					return r, true
-				default:
-					return
+				break
+			}
+			switch elem[0] {
+			case 'o': // Prefix: "ozon/"
+				origElem := elem
+				if l := len("ozon/"); len(elem) >= l && elem[0:l] == "ozon/" {
+					elem = elem[l:]
+				} else {
+					break
 				}
+
+				if len(elem) == 0 {
+					break
+				}
+				switch elem[0] {
+				case 'i': // Prefix: "item"
+					origElem := elem
+					if l := len("item"); len(elem) >= l && elem[0:l] == "item" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "POST":
+							r.name = "GetVientoItems"
+							r.summary = "get viento items"
+							r.operationID = "getVientoItems"
+							r.pathPattern = "/ozon/item"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+					elem = origElem
+				case 'l': // Prefix: "list_transaction"
+					origElem := elem
+					if l := len("list_transaction"); len(elem) >= l && elem[0:l] == "list_transaction" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "POST":
+							r.name = "GetVientoListTransaction"
+							r.summary = "get viento list transaction"
+							r.operationID = "getVientoListTransaction"
+							r.pathPattern = "/ozon/list_transaction"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+					elem = origElem
+				case 'o': // Prefix: "operation"
+					origElem := elem
+					if l := len("operation"); len(elem) >= l && elem[0:l] == "operation" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "POST":
+							r.name = "GetVientoOperations"
+							r.summary = "get viento operations"
+							r.operationID = "getVientoOperations"
+							r.pathPattern = "/ozon/operation"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+					elem = origElem
+				case 'p': // Prefix: "posting"
+					origElem := elem
+					if l := len("posting"); len(elem) >= l && elem[0:l] == "posting" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "POST":
+							r.name = "GetVientoPosting"
+							r.summary = "get viento posting"
+							r.operationID = "getVientoPosting"
+							r.pathPattern = "/ozon/posting"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+					elem = origElem
+				case 's': // Prefix: "s"
+					origElem := elem
+					if l := len("s"); len(elem) >= l && elem[0:l] == "s" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						break
+					}
+					switch elem[0] {
+					case 'e': // Prefix: "ervice"
+						origElem := elem
+						if l := len("ervice"); len(elem) >= l && elem[0:l] == "ervice" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch method {
+							case "POST":
+								r.name = "GetVientoServices"
+								r.summary = "get viento services"
+								r.operationID = "getVientoServices"
+								r.pathPattern = "/ozon/service"
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
+						}
+
+						elem = origElem
+					case 'u': // Prefix: "um/services"
+						origElem := elem
+						if l := len("um/services"); len(elem) >= l && elem[0:l] == "um/services" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch method {
+							case "POST":
+								r.name = "GetSumServicesByDay"
+								r.summary = "get sum services by day"
+								r.operationID = "getSumServicesByDay"
+								r.pathPattern = "/ozon/sum/services"
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
+						}
+
+						elem = origElem
+					}
+
+					elem = origElem
+				}
+
+				elem = origElem
+			case 'v': // Prefix: "viento/products"
+				origElem := elem
+				if l := len("viento/products"); len(elem) >= l && elem[0:l] == "viento/products" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "POST":
+						r.name = "GetVientoProducts"
+						r.summary = "get viento products"
+						r.operationID = "getVientoProducts"
+						r.pathPattern = "/viento/products"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
+				}
+
+				elem = origElem
 			}
 
 			elem = origElem
