# generated/oas_server_gen.go
@@ -1,6 +1,6 @@
 // Code generated by ogen, DO NOT EDIT.
 
-package oas
+package vnt
 
 import (
 	"context"
@@ -8,12 +8,52 @@ import (
 
 // Handler handles operations described by OpenAPI v3 specification.
 type Handler interface {
+	// GetSumServicesByDay implements getSumServicesByDay operation.
+	//
+	// Get sum services by day.
+	//
+	// POST /ozon/sum/services
+	GetSumServicesByDay(ctx context.Context, req *SumServicesByDayParams) (GetSumServicesByDayRes, error)
+	// GetVientoItems implements getVientoItems operation.
+	//
+	// Get viento items.
+	//
+	// POST /ozon/item
+	GetVientoItems(ctx context.Context) (GetVientoItemsRes, error)
+	// GetVientoListTransaction implements getVientoListTransaction operation.
+	//
+	// Get viento list transaction.
+	//
+	// POST /ozon/list_transaction
+	GetVientoListTransaction(ctx context.Context) (GetVientoListTransactionRes, error)
+	// GetVientoOperations implements getVientoOperations operation.
+	//
+	// Get viento operations.
+	//
+	// POST /ozon/operation
+	GetVientoOperations(ctx context.Context) (GetVientoOperationsRes, error)
+	// GetVientoPosting implements getVientoPosting operation.
+	//
+	// Get viento posting.
+	//
+	// POST /ozon/posting
+	GetVientoPosting(ctx context.Context) (GetVientoPostingRes, error)
 	// GetVientoProducts implements getVientoProducts operation.
 	//
 	// Get viento products.
 	//
 	// POST /viento/products
 	GetVientoProducts(ctx context.Context) (GetVientoProductsRes, error)
+	// GetVientoServices implements getVientoServices operation.
+	//
+	// Get viento services.
+	//
+	// POST /ozon/service
+	GetVientoServices(ctx context.Context) (GetVientoServicesRes, error)
+	// NewError creates *ErrorStatusCode from error returned by handler.
+	//
+	// Used for common default response.
+	NewError(ctx context.Context, err error) *ErrorStatusCode
 }
 
 // Server implements http server based on OpenAPI v3 specification and
